[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/stillwagon_studios_logo.png" type="Texture" id=2]
[ext_resource path="res://assets/wagon_wheel1.png" type="Texture" id=3]
[ext_resource path="res://assets/wagon_wheel_2.png" type="Texture" id=4]
[ext_resource path="res://assets/wagon_wheel_3.png" type="Texture" id=5]
[ext_resource path="res://assets/wagon_wheel_4.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "WheelAnimation",
"speed": 8.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="SplashScreenTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SplashScreenImage" type="TextureRect" parent="."]
margin_left = 220.0
margin_right = 1060.0
margin_bottom = 686.0
texture = ExtResource( 2 )

[node name="BackWheelAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 492, 520 )
frames = SubResource( 1 )
animation = "WheelAnimation"
frame = 3

[node name="FrontWheelAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 775, 520 )
frames = SubResource( 1 )
animation = "WheelAnimation"

[node name="WheelAnimationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="SplashScreenTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WheelAnimationTimer" to="." method="_on_WheelAnimationTimer_timeout"]
